refactor: 키 경로 환경변수 처리